-----------------------------------------------------------------------
v0.4.3




-----------------------------------------------------------------------
v0.4.2

- Results have improved slightly over previous testbed results. This
  may be due to the fact that FeatureVector.dotProduct would have got
  -1 return values on keys not held in the TIntDoubleHashMap for the
  second vector in the previous version of Trove. Now that Trove
  returns 0, this is actually the right behavior in this case. Another
  possible explanation is that there is some minor change in the
  features which are generated. Since the output has changed so
  little, and for the better, I'll leave it at that for now. The
  testbed results and output have been updated to reflect the current
  version. (JMB, 17-JAN-07)

- Uncommented a line in DependencyPipe that removed some features from
  the parsing models in the previous release. (Need to come up with a
  better way of defining different pipes!) (JMB, 17-JAN-07)

- Changed the FeatureVector implementation to be a TLinkedList of
  Feature objects, with two optional sub-FeatureVectors contained
  within. This supports fast concatenation of two FeatureVectors since
  it is no longer necessary to copy entire lists. Also, rather than
  explicitly negating features for the getDistVector() method, a
  boolean value is set that can optionally indicate the second
  sub-FeatureVector as negated. The logic of the other methods then
  preserves the negation (and negation with negation). Again, this
  means we don't have to make copies for this operation. These changes
  led sped up training by a factor of 2 to 4 (depedending on the
  number of features used in the parsing model) and parsing by up to
  1.5 times. (JMB, 17-JAN-07)

- Updated to Trove v1.1b5. Changed default return value of
  TObjectIntHashMap to be -1 rather than 0, so it is important to use
  the included trove.jar rather than downloading and using one from